# scz

./: .gitignore  BUGS.md  BUILDING.md  CLAUDE.md  PRINCIPLES.md  README.md
.github/: obtainium.json
.github/workflows/: build.yml  release.yml
app/: .gitignore  package-lock.json  package.json
app/src/: i18n.js  index.html  main.js  styles.css  ui.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: gateway.rs  identity.rs  lib.rs  main.rs  nip04.rs  relay.rs
app/src/sdk/: identity.js  primitives.js  relays.js
app/src/views/: call.js  feed.js  profile.js  spaces.js  wiki.js
app/zone/: index.html  noet-embed.js  noet.js  scz-embed.js  scz.js  styles.css
docs/: 01_VISION.md  02_PHILOSOPHY.md  03_SYSTEM_MODEL.md  04_ARCHITECTURE.md  05_STACK.md  06_GOVERNANCE.md  07_SECURITY.md  08_APPLICATIONS.md  09_CLIENTS.md  10_ROADMAP.md  AUDIT.md  AUDIT_2026-06-25.md  PLAN.md  SCZ_concept_v0.3.md  constitution.md  culture.md  governance.md
fdroid/metadata/: zone.noet.app.yml
poc/: CIDS.txt  README.md
poc/registry/: README.md  registry.mjs  resolver.mjs
poc/site/: index.html
poc/zone-portal/: .gitignore  README.md  auth.mjs  build-ext.mjs  gov.mjs  id.js  index.html  registry.json  registry.seed.json  server.mjs  tunnel.sh  ws.mjs
poc/zone-portal/docs/: 01-philosophy.md  02-primitives.md  03-federation.md  04-architecture.md  05-roadmap.md  06-domains.md  README.md
poc/zone-portal/ext/: app.html  app.js  bg.js  bridge.js  call.html  call.js  config.default.json  dev.html  feed.html  feed.js  home.html  home.js  manifest.firefox.json  manifest.json  noet-names.js  noet-primitives.js  noet-sdk.js  nostr-provider.js  people.html  people.js  popup.html  popup.js  render.html  view.html  view.js
poc/zone-portal/extension/: background.js  manifest.json
poc/zone-portal/userscript/: scz-zone.user.js
poc/zone-portal/web/: account.html  account.js  app.css  bridge.html  bridge.js  dev.html  i18n.js  migrate.html  (+4 more)
scripts/: build-apk.sh  build-arch.sh  bump.js  setup-arch.sh
(+9 files in other folders)
