[package]
name = "scz"
version = "0.1.0"
description = "SCZ — Самоуправляемая Цифровая Зона"
authors = ["SCZ"]
edition = "2021"
rust-version = "1.77"

# Tauri v2: библиотека (для mobile) + бинарь (для desktop)
[lib]
name = "scz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# крипта личности живёт ТОЛЬКО в Rust (правило §1): secp256k1 BIP340 Schnorr, как в Nostr
secp256k1 = { version = "0.29", features = ["rand", "std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[features]
# по умолчанию для desktop; tauri добавляет custom-protocol в релизной сборке
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
