[package]
name = "scz"
version = "0.1.0"
description = "SCZ — Самоуправляемая Цифровая Зона"
authors = ["SCZ"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "scz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# крипта личности живёт ТОЛЬКО в Rust (правило §1): secp256k1 BIP340 Schnorr
secp256k1 = { version = "0.29", features = ["rand", "std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
# личные сообщения (NIP-04): ECDH + AES-256-CBC
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
# локальный шлюз: отдаёт зону браузеру + API подписи. Узел = бэкбон вместо расширения.
tiny_http = "0.12"
include_dir = "0.7"
open = "5"
# прокси картинок: узел качает аватары/медиа без браузерного Referer (обход хотлинк-защиты)
ureq = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
